--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ main{
     ALBUM CARD
 -------------*/
 .album_card{
-    background-color: 4.6875rem;
+    background-color: #2e3a46;
     padding: .625rem;
     padding-bottom: 1.875rem;
     height: 100%;
